# Connect4EngineRust

./: .gitignore  Cargo.toml  README.md  Test_L3_R1.txt  check_results.py
.cargo/: config.toml
nnue/: db_converter.py  export_model.pth  liveplot.py  main.py  mergedb.py  model.pth  net.py
src/: board.rs  cli.rs  database.rs  evaluate.rs  lib.rs  main.rs  moves.rs  nnue.rs  scoredmoves.rs  strategy.rs  transpositiontable.rs
test_inputs/: Test_L2_R2_PART.txt
tests/: test_board.rs  test_moves.rs  test_strategy.rs  test_transpositiontable.rs
