[package]
name = "connect4engine"
version = "0.1.0"
edition = "2021"
description = "A Connect 4 Engine written in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.30", features = ["derive"] }
anyhow = "1.0.68"

[profile.dev]
opt-level=3
