[package]
name = "connect4engine"
version = "0.1.0"
edition = "2021"
description = "A Connect 4 Engine written in Rust"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
rand = "0.8.5"
tch = "0.10.1"

[dependencies.clap]
version = "4.0.30"
features = ["derive"]

[dependencies.rusqlite]
version = "0.28.0"
features = ["bundled"]

[profile.dev]
opt-level=3
